8205924: ZGC: Premature OOME due to failure to expand backing file

Reviewed-by: ehelin